--- a/style.css
+++ b/style.css
@@ -1357,9 +1357,15 @@ header {
   .main-profile-pic {
     width: 120px;
     height: 120px;
+    margin-left: 0;
+    margin-right: 0;
+    display: block;
+    margin: 0 auto 0 auto;
   }
   .main-header-content {
     align-items: center;
+    margin: 0 auto;
+    width: 100%;
   }
   .main-header-content .main-title,
   .main-header-content .main-intro {
