--- a/style.css
+++ b/style.css
@@ -1428,3 +1428,21 @@ header {
     justify-content: center;
   }
 }
+
+.about-me {
+  font-size: 1.05em;
+}
+@media only screen and (max-width: 900px) {
+  .about-me {
+    font-size: 1em;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .about-row.work-experience .work-item {
+    margin-bottom: 28px;
+  }
+  .about-row.work-experience .work-item:last-child {
+    margin-bottom: 0;
+  }
+}
