--- a/style.css
+++ b/style.css
@@ -1424,17 +1424,23 @@ header {
 
 @media only screen and (max-width: 700px) {
   #projects {
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
     justify-content: center;
     align-items: center;
     display: flex;
     flex-direction: column;
+    width: 100%;
+    padding: 0;
   }
   .contact-center-form {
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
     align-items: center;
     display: flex;
     flex-direction: column;
+    width: 100%;
+    padding: 0;
   }
 }
 
